@@ -558,7 +558,8 @@ unmaximized."
                                       (+ (car head-offset) (car vp-offset))
                                       (+ (cdr head-offset) (cdr vp-offset))
                                       (car head-dims) (cdr head-dims))
-	       (raise-window* w)
+	       (when maximize-raises
+	         (raise-window* w))
 	       (window-put w 'maximized-fullscreen t)
 	       (window-put w 'maximized-vertically t)
 	       (window-put w 'maximized-horizontally t)
@@ -595,7 +596,8 @@ t")
                                       (cdr vp-offset)
                                       (+ (car screen-dims) (car vp-offset))
                                       (+ (cdr screen-dims) (cdr vp-offset)))
-	       (raise-window* w)
+	       (when maximize-raises
+	         (raise-window* w))
 	       (window-put w 'maximized-fullscreen t)
 	       (window-put w 'maximized-vertically t)
 	       (window-put w 'maximized-horizontally t)
