@@ -43,6 +43,9 @@ accordingly. [Fuchur]
 
 @item Unsupported option @code{ignore-window-input-hint} is deleted [Teika kazura] @*
 It has been invalid for long.
+
+@item Honor maximize-raises in @code{maximize-window-fullscreen} and
+@code{maximize-window-fullxinerama}, too, not just in maximize-window [Nolan Leake]
 @end itemize
 
 @item Other Changes
