@@ -1,3 +1,7 @@
+2010-03-19  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/state/maximize.jl: make maximize-/-fullscreen/fullxinerama
+	                                     honor maximize-raises [Nolan Leake]
+
 2010-03-13  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/util/display-wininfo.jl: missing require
 
